--- a/common/build.gradle
+++ b/common/build.gradle
@@ -10,6 +10,10 @@ architectury {
     common()
 }
 
+loom {
+    accessWidenerPath = file("src/main/resources/polylib.accesswidener")
+}
+
 publishing {
     publications {
         mavenCommon(MavenPublication) {
