Add ENV definition

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id "com.github.johnrengelman.shadow" version "7.1.2"
 }
+
+def ENV = System.getenv()
+
 loom {
     forge {
         mixinConfig "polylib.mixins.json"
