--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id "com.github.johnrengelman.shadow" version "7.1.2"
 }
 
+def ENV = System.getenv()
+
 architectury {
     platformSetupLoomIde()
     fabric()
