--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -27,8 +27,11 @@ dependencies {
     // Remove the next line if you don't want to depend on the API
     modApi "dev.architectury:architectury-fabric:${rootProject.architectury_version}"
 
+    implementation('io.sentry:sentry:5.7.2')
+
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
+    shadowCommon("io.sentry:sentry:5.7.2") { transitive false }
 }
 
 processResources {
@@ -41,6 +44,8 @@ processResources {
 
 shadowJar {
     exclude "architectury.common.json"
+
+    relocate 'io.sentry', 'net.creeperhost.polylib.io.sentry'
 
     configurations = [project.configurations.shadowCommon]
     classifier "dev-shadow"
