--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -37,8 +37,14 @@ dependencies {
     // Remove the next line if you don't want to depend on the API
     modApi "dev.architectury:architectury-forge:${rootProject.architectury_version}"
 
+    implementation('io.sentry:sentry:5.7.2')
+    {
+        exclude group: 'com.google', module: 'gson'
+    }
+
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
+    shadowCommon("io.sentry:sentry:5.7.2") { transitive false }
 }
 
 processResources {
@@ -52,6 +58,12 @@ processResources {
 shadowJar {
     exclude "fabric.mod.json"
     exclude "architectury.common.json"
+
+    dependencies {
+        exclude(dependency('com.google::'))
+    }
+
+    relocate 'io.sentry', 'net.creeperhost.polylib.io.sentry'
 
     configurations = [project.configurations.shadowCommon]
     classifier "dev-shadow"
