--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,6 +4,10 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     // Remove the next line if you don't want to depend on the API
     modApi "dev.architectury:architectury:${rootProject.architectury_version}"
+    implementation('io.sentry:sentry:5.7.2')
+    {
+        exclude group: 'com.google', module: 'gson'
+    }
 }
 
 architectury {
