--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     forge "net.minecraftforge:forge:${rootProject.forge_version}"
     // Remove the next line if you don't want to depend on the API
     modApi "dev.architectury:architectury-forge:${rootProject.architectury_version}"
+    forgeRuntimeLibrary('blue.endless:jankson:1.2.1')
 
     implementation('io.sentry:sentry:5.7.2')
     {
@@ -45,6 +46,9 @@ dependencies {
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
     shadowCommon("io.sentry:sentry:5.7.2") { transitive false }
+
+    implementation "blue.endless:jankson:1.2.1"
+    shadowCommon "blue.endless:jankson:1.2.1"
 }
 
 processResources {
@@ -64,6 +68,7 @@ shadowJar {
     }
 
     relocate 'io.sentry', 'net.creeperhost.polylib.io.sentry'
+    relocate 'blue.endless.jankson', 'net.creeperhost.polylib.blue.endless.jankson'
 
     configurations = [project.configurations.shadowCommon]
     classifier "dev-shadow"
