--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,6 @@
 modLoader = "javafml"
-loaderVersion = "[38,)"
-#issueTrackerURL = ""
+loaderVersion = "[41,)"
+issueTrackerURL = "https://github.com/CreeperHost/PolyLib/issues"
 license = "Insert License Here"
 
 [[mods]]
@@ -15,20 +15,20 @@ description = '''
 [[dependencies.polylib]]
 modId = "forge"
 mandatory = true
-versionRange = "[38,)"
+versionRange = "[41.0.64,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.polylib]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[1.18,)"
+versionRange = "[1.19,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.polylib]]
 modId = "architectury"
 mandatory = true
-versionRange = "[3.6.15,)"
+versionRange = "[3.8.29,)"
 ordering = "AFTER"
 side = "BOTH"
