--- a/settings.gradle
+++ b/settings.gradle
@@ -7,8 +7,15 @@ pluginManagement {
     }
 }
 
+if (JavaVersion.current().ordinal() + 1 < 17) {
+    throw new IllegalStateException("Please run gradle with Java 17+!")
+}
+
 include("common")
 include("fabric")
 include("forge")
+include("testmod-common")
+include("testmod-fabric")
+include("testmod-forge")
 
 rootProject.name = "polylib"
