--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -33,7 +33,7 @@ configurations {
 }
 
 dependencies {
-    forge "net.minecraftforge:forge:${rootProject.forge_version}"
+    forge "net.minecraftforge:forge:${rootProject.minecraft_version}-${rootProject.forge_version}"
     // Remove the next line if you don't want to depend on the API
     modApi "dev.architectury:architectury-forge:${rootProject.architectury_version}"
     forgeRuntimeLibrary('blue.endless:jankson:1.2.1')
