--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,9 @@
 org.gradle.jvmargs=-Xmx4096M
+org.gradle.daemon=false
 
 minecraft_version=1.19
+
+platforms=fabric,forge
 
 archives_base_name=polylib
 mod_version=1900.0.2
@@ -11,4 +14,4 @@ architectury_version=5.10.33
 fabric_loader_version=0.14.6
 fabric_api_version=0.55.2+1.19
 
-forge_version=1.19-41.1.0
+forge_version=41.1.0
