Some work on the ScreenBuilder

--- a/testmod-forge/build.gradle
+++ b/testmod-forge/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 loom {
-    accessWidenerPath = project(":common").loom.accessWidenerPath
+    accessWidenerPath = project(":testmod-common").loom.accessWidenerPath
 
     forge {
         mixinConfig "architectury.mixins.json"
