--- a/testmod-common/build.gradle
+++ b/testmod-common/build.gradle
@@ -1,11 +1,13 @@
 loom {
-//    accessWidenerPath = project(':common').file("src/main/resources/architectury.accessWidener")
+    //This is a hack to get arch accessWideners into out testmod
+    accessWidenerPath = project(':testmod-common').file("src/main/resources/architectury.accessWidener")
 }
 
 dependencies {
     // We depend on fabric loader here to use the fabric @Environment annotations
     // Do NOT use other classes from fabric loader
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
+
     implementation project(path: ":common", configuration: "namedElements")
 }
 
