Add capability for PolyInventory if Forge

--- a/testmod-forge/build.gradle
+++ b/testmod-forge/build.gradle
@@ -8,6 +8,7 @@ loom {
 
     forge {
         mixinConfig "architectury.mixins.json"
+        mixinConfig "polylib-forge.mixins.json"
 
         localMods {
             forge {
