--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -7,6 +7,7 @@ def ENV = System.getenv()
 loom {
     forge {
         mixinConfig "polylib.mixins.json"
+        mixinConfig "polylib-forge.mixins.json"
     }
 }
 
