--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ classes/
 .vscode
 .settings
 *.launch
+testmod-common/src/generated/resources/assets/.cache/
+
+testmod-fabric/src/generated/resources/.cache/
