--- a/build.gradle
+++ b/build.gradle
@@ -24,25 +24,30 @@ subprojects {
 }
 
 allprojects {
-    apply plugin: "java"
-    apply plugin: "architectury-plugin"
-    apply plugin: "maven-publish"
+    //Added to ignore the testmod
+    if(project == project(":common") || project == project(":forge") || project == project(":fabric"))
+    {
+        apply plugin: "java"
+        apply plugin: "architectury-plugin"
+        apply plugin: "maven-publish"
 
-    def ENV = System.getenv()
-    version = "${mod_version}-build.${ENV.GITHUB_RUN_NUMBER ?: 9999}"
-    group = rootProject.maven_group
-    archivesBaseName = rootProject.archives_base_name
+        def ENV = System.getenv()
+        version = "${mod_version}-build.${ENV.GITHUB_RUN_NUMBER ?: 9999}"
+        group = rootProject.maven_group
+        archivesBaseName = rootProject.archives_base_name
 
-    repositories {
-        maven { url 'https://maven.creeperhost.net' }
-    }
 
-    tasks.withType(JavaCompile) {
-        options.encoding = "UTF-8"
-        options.release = 17
-    }
+        repositories {
+            maven { url 'https://maven.creeperhost.net' }
+        }
 
-    java {
-        withSourcesJar()
+        tasks.withType(JavaCompile) {
+            options.encoding = "UTF-8"
+            options.release = 17
+        }
+
+        java {
+            withSourcesJar()
+        }
     }
 }
