Loom 1.1 and Dynamic texture data gen.

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -15,10 +15,13 @@ loom {
 
 configurations {
     common
+    shadowLib
     shadowCommon // Don't use shadow from the shadow plugin because we don't want IDEA to index this.
+    shadowCommon.extendsFrom shadowLib
     compileClasspath.extendsFrom common
     runtimeClasspath.extendsFrom common
     developmentFabric.extendsFrom common
+    implementation.extendsFrom shadowLib
 }
 
 dependencies {
