--- a/testmod-fabric/build.gradle
+++ b/testmod-fabric/build.gradle
@@ -25,7 +25,7 @@ loom {
 
     accessWidenerPath = project(":testmod-common").loom.accessWidenerPath
 
-    mixin { useLegacyMixinAp = true }
+//    mixin { useLegacyMixinAp = true }
 }
 
 architectury {
@@ -35,9 +35,13 @@ architectury {
 
 configurations {
     common
+    shadowLib
+    shadowCommon // Don't use shadow from the shadow plugin because we don't want IDEA to index this.
+    shadowCommon.extendsFrom shadowLib
     compileClasspath.extendsFrom common
     runtimeClasspath.extendsFrom common
     developmentFabric.extendsFrom common
+    implementation.extendsFrom shadowLib
 }
 
 dependencies {
