--- a/testmod-forge/build.gradle
+++ b/testmod-forge/build.gradle
@@ -8,6 +8,12 @@ loom {
 
     accessWidenerPath = project(":testmod-common").loom.accessWidenerPath
 
+    mods {
+        forge {
+            sourceSet project(":forge").sourceSets.main
+        }
+    }
+
     runs {
         data {
             data()
@@ -20,7 +26,7 @@ loom {
             programArgs "--existing", project(":common").file("src/main/resources").absolutePath
 
             //I believe this should work for any mods that dep on polylib, it just does not work with the builtin test mod
-//            programArgs "--existing-mod", "polylib"
+            programArgs "--existing-mod", "polylib"
         }
     }
 
@@ -40,15 +46,20 @@ architectury {
 }
 
 configurations {
+//    common
+//    shadowLib
+//    shadowCommon // Don't use shadow from the shadow plugin because we don't want IDEA to index this.
+//    shadowCommon.extendsFrom shadowLib
+//    compileClasspath.extendsFrom common
+//    runtimeClasspath.extendsFrom common
+//    developmentForge.extendsFrom common
+//    implementation.extendsFrom shadowLib
+//    forgeRuntimeLibrary.extendsFrom shadowLib
+
     common
-    shadowLib
-    shadowCommon // Don't use shadow from the shadow plugin because we don't want IDEA to index this.
-    shadowCommon.extendsFrom shadowLib
     compileClasspath.extendsFrom common
     runtimeClasspath.extendsFrom common
     developmentForge.extendsFrom common
-    implementation.extendsFrom shadowLib
-    forgeRuntimeLibrary.extendsFrom shadowLib
 }
 
 repositories {
@@ -63,15 +74,14 @@ dependencies {
 
     forgeRuntimeLibrary("blue.endless:jankson:1.2.1")
 
-//    implementation project(path: ":forge", configuration: "namedElements")
-    modApi project(path: ":forge", configuration: "namedElements")
+//    modApi project(path: ":forge", configuration: "namedElements")
 
-
+    implementation project(path: ":forge", configuration: "namedElements")
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     common(project(path: ":testmod-common", configuration: "namedElements")) { transitive false }
 }
 
 
-publishing {
-
-}
+//publishing {
+//
+//}
