GuiEnergyBar, GuiFluidTank, Modular gui inventory implementation
And a bunch or random fixes and tweaks.

--- a/testmod-forge/build.gradle
+++ b/testmod-forge/build.gradle
@@ -35,6 +35,8 @@ loom {
         extraAccessWideners.add loom.accessWidenerPath.get().asFile.name
 
         mixinConfig "architectury.mixins.json"
+        mixinConfig "polylib.mixins.json"
+        mixinConfig "polylib-forge.mixins.json"
     }
 }
 
