--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,7 +2,7 @@ name: Java CI
 
 on:
   push:
-    branches: [ main, dev ]
+    branches: [ main, dev, 1.18 ]
   workflow_dispatch:
     inputs:
       norelease:
