--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,7 +2,7 @@ name: Java CI
 
 on:
   push:
-    branches: [ 1.19, 1.19.3, 1.20 ]
+    branches: [ 1.19, 1.19.3, release/1.20 ]
   workflow_dispatch:
     inputs:
       norelease:
