--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,7 +2,7 @@ name: Java CI
 
 on:
   push:
-    branches: [ 1.19, 1.19.3 ]
+    branches: [ release/1.19, release/1.19.3 ]
   workflow_dispatch:
     inputs:
       norelease:
