--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,18 @@
 org.gradle.jvmargs=-Xmx4096M
 org.gradle.daemon=false
 
-minecraft_version=1.20
+minecraft_version=1.20.2
 
-platforms=fabric,forge
+platforms=fabric,forge,neoforge
 
 archives_base_name=polylib
-mod_version=2000.0.3
+mod_version=2002.0.3
 maven_group=net.creeperhost
 
-architectury_version=9.0.7
+architectury_version=10.0.16
 
-fabric_loader_version=0.14.21
-fabric_api_version=0.83.0+1.20
+fabric_loader_version=0.14.22
+fabric_api_version=0.89.0+1.20.2
 
-forge_version=46.0.1
+forge_version=48.0.38
+neoforge_version=20.2.59-beta
