--- a/neoforge/src/main/resources/META-INF/mods.toml
+++ b/neoforge/src/main/resources/META-INF/mods.toml
@@ -1,7 +1,7 @@
 modLoader = "javafml"
 loaderVersion = "[1,)"
 issueTrackerURL = "https://github.com/CreeperHost/PolyLib/issues"
-license = "Insert License Here"
+license = "BSD 4-Clause License"
 
 [[mods]]
 modId = "polylib"
@@ -10,7 +10,8 @@ displayName = "PolyLib"
 authors = "CreeperHost"
 description = '''
 '''
-#logoFile = ""
+logoFile="polylib_logo.png"
+
 
 [[dependencies.polylib]]
 modId = "neoforge"
