Remove old debug discord message

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,7 +2,7 @@ name: Java CI
 
 on:
   push:
-    branches: [ 1.19, 1.19.3, release/1.20 ]
+    branches: [ release/1.20 ]
   workflow_dispatch:
     inputs:
       norelease:
@@ -37,13 +37,3 @@ jobs:
         run: |
           chmod +x ./gradlew
           ./gradlew build publish --stacktrace --no-daemon
-      - name: Send Forge notification to Discord
-        uses: sebastianpopp/discord-action@releases/v2
-        with:
-          webhook: ${{ secrets.DISCORD_WEBHOOK }}
-          message: https://maven.creeperhost.net/net/creeperhost/polylib-forge/1200.0.2-build.${{github.run_number}}/polylib-forge-1200.0.2-build.${{github.run_number}}.jar
-      - name: Send Fabric notification to Discord
-        uses: sebastianpopp/discord-action@releases/v2
-        with:
-          webhook: ${{ secrets.DISCORD_WEBHOOK }}
-          message: https://maven.creeperhost.net/net/creeperhost/polylib-fabric/1200.0.2-build.${{github.run_number}}/polylib-fabric-1200.0.2-build.${{github.run_number}}.jar
