--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,8 @@ platforms=fabric,forge,neoforge
 archives_base_name=polylib
 mod_version=2002.0.3
 maven_group=net.creeperhost
+curseforge_id=576589
+artifact_type=release
 
 architectury_version=10.0.17
 
