--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,4 +36,4 @@ jobs:
           CREEPERHOST_MAVEN_TOKEN: ${{ secrets.CREEPERHOST_MAVEN_TOKEN}}
         run: |
           chmod +x ./gradlew
-          ./gradlew build publish --stacktrace --no-daemon
+          ./gradlew build publish publishUnified --stacktrace --no-daemon
