--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Build with Gradle
         env:
           CREEPERHOST_MAVEN_TOKEN: ${{ secrets.CREEPERHOST_MAVEN_TOKEN}}
+          CURSE_API_KEY: ${{ secrets.CURSE_API_KEY }}
         run: |
           chmod +x ./gradlew
           ./gradlew build publish publishUnified --stacktrace --no-daemon
