Fix version strings for CurseForge releases

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -67,7 +67,7 @@ remapJar {
     injectAccessWidener = true
     input.set shadowJar.archiveFile
     dependsOn shadowJar
-    archiveClassifier = null
+    archiveClassifier = "fabric"
 }
 
 jar {
@@ -110,7 +110,7 @@ publishing {
 
 unifiedPublishing {
     project {
-        displayName = "$rootProject.mod_version [Fabric]"
+        displayName = "$rootProject.curseforge_version.${ENV.GITHUB_RUN_NUMBER} [Forge]"
         releaseType = "$rootProject.artifact_type"
         changelog = ""
         gameVersions = []
