--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ platforms=fabric,forge,neoforge
 archives_base_name=polylib
 mod_version=2002.0.3
 maven_group=net.creeperhost
+curseforge_version=0.3
 curseforge_id=576589
 artifact_type=release
 
