--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -71,6 +71,7 @@ remapJar {
     dependsOn shadowJar
     archiveClassifier = null
     atAccessWideners.add('polylib.accesswidener')
+    archiveClassifier = "neoforge"
 }
 
 jar {
@@ -113,7 +114,7 @@ publishing {
 
 unifiedPublishing {
     project {
-        displayName = "$rootProject.mod_version [NeoForge]"
+        displayName = "$rootProject.curseforge_version.${ENV.GITHUB_RUN_NUMBER} [Forge]"
         releaseType = "$rootProject.artifact_type"
         changelog = ""
         gameVersions = []
