Added gui JEI integration and simple gui dialog element.

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     {
         exclude group: 'com.google', module: 'gson'
     }
+
+    modApi "mezz.jei:jei-${rootProject.minecraft_version}-common-api:${rootProject.jei_version}"
 }
 
 architectury {
