--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -55,6 +55,8 @@ dependencies {
 
     implementation "blue.endless:jankson:1.2.1"
     shadowCommon "blue.endless:jankson:1.2.1"
+
+//    modApi "mezz.jei:jei-${rootProject.minecraft_version}-forge:${rootProject.jei_version}"
 }
 
 processResources {
