--- a/testmod-forge/build.gradle
+++ b/testmod-forge/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     implementation project(path: ":forge", configuration: "namedElements")
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     common(project(path: ":testmod-common", configuration: "namedElements")) { transitive false }
+
+//    modApi "mezz.jei:jei-${rootProject.minecraft_version}-forge:${rootProject.jei_version}"
 }
 
 
