--- a/testmod-common/build.gradle
+++ b/testmod-common/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
 
     implementation project(path: ":common", configuration: "namedElements")
+
+    modApi "mezz.jei:jei-${rootProject.minecraft_version}-common-api:${rootProject.jei_version}"
 }
 
 architectury {
