--- a/common/build.gradle
+++ b/common/build.gradle
@@ -9,6 +9,8 @@ dependencies {
     {
         exclude group: 'com.google', module: 'gson'
     }
+
+    modCompileOnlyApi "mezz.jei:jei-${rootProject.minecraft_version}-common-api:${rootProject.jei_version}"
 }
 
 architectury {
