--- a/testmod-fabric/build.gradle
+++ b/testmod-fabric/build.gradle
@@ -53,8 +53,12 @@ dependencies {
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     common(project(path: ":testmod-common", configuration: "namedElements")) { transitive false }
 
-    modLocalRuntime 'RebornCore:RebornCore-1.20:5.8.0'
-    modLocalRuntime 'TechReborn:TechReborn-1.20:5.8.0'
+//    modLocalRuntime 'RebornCore:RebornCore-1.20:5.8.0'
+//    modLocalRuntime 'TechReborn:TechReborn-1.20:5.8.0'
+
+    modCompileOnlyApi "mezz.jei:jei-${rootProject.minecraft_version}-common-api:${rootProject.jei_version}"
+    modCompileOnlyApi "mezz.jei:jei-${rootProject.minecraft_version}-fabric-api:${rootProject.jei_version}"
+    modRuntimeOnly "mezz.jei:jei-${rootProject.minecraft_version}-fabric:${rootProject.jei_version}"
 }
 
 publishing {
