--- a/common/build.gradle
+++ b/common/build.gradle
@@ -23,7 +23,7 @@ dependencies {
         exclude group: 'com.google', module: 'gson'
     }
 
-    modApi "mezz.jei:jei-${rootProject.minecraft_version}-common-api:${rootProject.jei_version}"
+//    modApi "mezz.jei:jei-${rootProject.minecraft_version}-common-api:${rootProject.jei_version}"
 }
 
 architectury {
