--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -43,9 +43,9 @@ dependencies {
         exclude(group: "net.fabricmc.fabric-api")
     }
 
-    modApi "mezz.jei:jei-${rootProject.minecraft_version}-common-api:${rootProject.jei_version}"
-    modApi "mezz.jei:jei-${rootProject.minecraft_version}-fabric-api:${rootProject.jei_version}"
-    modApi "mezz.jei:jei-${rootProject.minecraft_version}-fabric:${rootProject.jei_version}"
+//    modApi "mezz.jei:jei-${rootProject.minecraft_version}-common-api:${rootProject.jei_version}"
+//    modApi "mezz.jei:jei-${rootProject.minecraft_version}-fabric-api:${rootProject.jei_version}"
+//    modApi "mezz.jei:jei-${rootProject.minecraft_version}-fabric:${rootProject.jei_version}"
 }
 
 
