--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -60,7 +60,7 @@ dependencies {
 //    modApi "mezz.jei:jei-${rootProject.minecraft_version}-common:${rootProject.jei_version}"
 //    modApi "mezz.jei:jei-${rootProject.minecraft_version}-forge-api:${rootProject.jei_version}"
 //    modApi "mezz.jei:jei-${rootProject.minecraft_version}-forge:${rootProject.jei_version}"
-    modRuntimeOnly "mezz.jei:jei-${rootProject.minecraft_version}-forge:${rootProject.jei_version}"
+//    modRuntimeOnly "mezz.jei:jei-${rootProject.minecraft_version}-forge:${rootProject.jei_version}"
 }
 
 processResources {
