--- a/settings.gradle
+++ b/settings.gradle
@@ -16,9 +16,9 @@ include("fabric")
 include("forge")
 include("neoforge")
 
-//include("testmod-common")
-//include("testmod-fabric")
-//include("testmod-forge")
-//include("testmod-neoforge")
+include("testmod-common")
+include("testmod-fabric")
+include("testmod-forge")
+include("testmod-neoforge")
 
 rootProject.name = "polylib"
