--- a/testmod-common/build.gradle
+++ b/testmod-common/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 
     implementation project(path: ":common", configuration: "namedElements")
 
-    modApi "mezz.jei:jei-${rootProject.minecraft_version}-common-api:${rootProject.jei_version}"
+//    modApi "mezz.jei:jei-${rootProject.minecraft_version}-common-api:${rootProject.jei_version}"
 }
 
 architectury {
