Backport Gui Changes

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     shadowCommon("io.sentry:sentry:5.7.2") { transitive false }
     implementation "blue.endless:jankson:1.2.1"
     shadowCommon "blue.endless:jankson:1.2.1"
+
+//    modCompileOnlyApi "mezz.jei:jei-${rootProject.minecraft_version}-fabric-api:${rootProject.jei_version}"
+//    modRuntimeOnly "mezz.jei:jei-${rootProject.minecraft_version}-fabric:${rootProject.jei_version}"
 }
 
 processResources {
