--- a/common/build.gradle
+++ b/common/build.gradle
@@ -8,6 +8,8 @@ dependencies {
     {
         exclude group: 'com.google', module: 'gson'
     }
+
+    modCompileOnlyApi "mezz.jei:jei-${rootProject.minecraft_version}-common-api:${rootProject.jei_version}"
 }
 
 architectury {
