--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -32,6 +32,10 @@ dependencies {
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
     shadowCommon("io.sentry:sentry:5.7.2") { transitive false }
+
+//    modCompileOnlyApi "mezz.jei:jei-${rootProject.minecraft_version}-fabric-api:${rootProject.jei_version}"
+//    modRuntimeOnly "mezz.jei:jei-${rootProject.minecraft_version}-fabric:${rootProject.jei_version}"
+    modApi "mezz.jei:jei-${rootProject.minecraft_version}-fabric:${rootProject.jei_version}"
 }
 
 processResources {
