--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,10 @@ maven_group=net.creeperhost
 
 architectury_version=4.1.32
 
-fabric_loader_version=0.13.3
+fabric_loader_version=0.14.6
 fabric_api_version=0.48.0+1.18.2
 
 forge_version=1.18.2-40.0.17
+
+jei_version=10.2.1.1005
+
