--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -56,11 +56,8 @@ dependencies {
     implementation "blue.endless:jankson:1.2.1"
     shadowCommon "blue.endless:jankson:1.2.1"
 
-//    modApi "mezz.jei:jei-${rootProject.minecraft_version}-common-api:${rootProject.jei_version}"
-//    modApi "mezz.jei:jei-${rootProject.minecraft_version}-common:${rootProject.jei_version}"
-//    modApi "mezz.jei:jei-${rootProject.minecraft_version}-forge-api:${rootProject.jei_version}"
-//    modApi "mezz.jei:jei-${rootProject.minecraft_version}-forge:${rootProject.jei_version}"
-    modRuntimeOnly "mezz.jei:jei-${rootProject.minecraft_version}-forge:${rootProject.jei_version}"
+    modCompileOnly "mezz.jei:jei-${rootProject.minecraft_version}-forge-api:${rootProject.jei_version}"
+//    modRuntimeOnly "mezz.jei:jei-${rootProject.minecraft_version}-forge:${rootProject.jei_version}"
 }
 
 processResources {
