--- a/testmod-fabric/build.gradle
+++ b/testmod-fabric/build.gradle
@@ -55,9 +55,9 @@ dependencies {
 
 //    modLocalRuntime 'RebornCore:RebornCore-1.20:5.8.0'
 //    modLocalRuntime 'TechReborn:TechReborn-1.20:5.8.0'
-//    modApi "mezz.jei:jei-${rootProject.minecraft_version}-common-api:${rootProject.jei_version}"
-//    modApi "mezz.jei:jei-${rootProject.minecraft_version}-fabric-api:${rootProject.jei_version}"
-//    modApi "mezz.jei:jei-${rootProject.minecraft_version}-fabric:${rootProject.jei_version}"
+
+//    modCompileOnly "mezz.jei:jei-${rootProject.minecraft_version}-fabric-api:${rootProject.jei_version}"
+//    modRuntimeOnly "mezz.jei:jei-${rootProject.minecraft_version}-fabric:${rootProject.jei_version}"
 }
 
 publishing {
