--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -8,7 +8,7 @@ def ENV = System.getenv()
 architectury {
     platformSetupLoomIde()
     neoForge {
-        platformPackage = "forge"
+        platformPackage = "neoforge"
     }
 }
 
