Backport tile data system

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     shadowCommon "blue.endless:jankson:1.2.1"
 
     modCompileOnlyApi "mezz.jei:jei-${rootProject.minecraft_version}-forge-api:${rootProject.jei_version}"
-    modRuntimeOnly "mezz.jei:jei-${rootProject.minecraft_version}-forge:${rootProject.jei_version}"
+//    modRuntimeOnly "mezz.jei:jei-${rootProject.minecraft_version}-forge:${rootProject.jei_version}"
 }
 
 processResources {
