--- a/testmod-forge/build.gradle
+++ b/testmod-forge/build.gradle
@@ -67,7 +67,7 @@ dependencies {
     common(project(path: ":testmod-common", configuration: "namedElements")) { transitive false }
 
     modCompileOnlyApi "mezz.jei:jei-${rootProject.minecraft_version}-forge-api:${rootProject.jei_version}"
-    modRuntimeOnly "mezz.jei:jei-${rootProject.minecraft_version}-forge:${rootProject.jei_version}"
+//    modRuntimeOnly "mezz.jei:jei-${rootProject.minecraft_version}-forge:${rootProject.jei_version}"
 }
 
 
