--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -24,13 +24,13 @@ side = "BOTH"
 [[dependencies.polylib]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[1.20.2,)"
+versionRange = "[1.20.4,1.21)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.polylib]]
 modId = "architectury"
 mandatory = true
-versionRange = "[10.0.16,)"
+versionRange = "[11.0.9,)"
 ordering = "AFTER"
 side = "BOTH"
