--- a/gradle.properties
+++ b/gradle.properties
@@ -12,12 +12,12 @@ curseforge_version=0.3
 curseforge_id=576589
 artifact_type=release
 
-architectury_version=11.0.11
+architectury_version=11.1.13
 
 fabric_loader_version=0.15.1
 fabric_api_version=0.91.1+1.20.4
 
 forge_version=49.0.3
-neoforge_version=20.4.80-beta
+neoforge_version=20.4.188
 
 jei_version=16.0.0.28
