Re-Added JEI support, Also added example JEI compatible ghost slot.

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -23,7 +23,7 @@ dependencies {
         exclude group: 'com.google', module: 'gson'
     }
 
-//    modCompileOnly "mezz.jei:jei-${rootProject.minecraft_version}-common-api:${rootProject.jei_version}"
+    modCompileOnly "mezz.jei:jei-${rootProject.minecraft_version}-common-api:${rootProject.jei_version}"
 }
 
 architectury {
