--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -41,6 +41,9 @@ dependencies {
 
     implementation "blue.endless:jankson:1.2.1"
     shadowCommon "blue.endless:jankson:1.2.1"
+
+    modCompileOnly "mezz.jei:jei-${rootProject.minecraft_version}-neoforge-api:${rootProject.jei_version}"
+    modRuntimeOnly "mezz.jei:jei-${rootProject.minecraft_version}-neoforge:${rootProject.jei_version}"
 }
 
 processResources {
