--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     // Remove the next line if you don't want to depend on the API
     modApi "dev.architectury:architectury-neoforge:${rootProject.architectury_version}"
     forgeRuntimeLibrary('blue.endless:jankson:1.2.1')
+    forgeRuntimeLibrary('io.sentry:sentry:5.7.2')
 
     implementation('io.sentry:sentry:5.7.2')
     {
@@ -37,7 +38,9 @@ dependencies {
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionNeoForge")) { transitive = false }
-    shadowCommon("io.sentry:sentry:5.7.2") { transitive false }
+    shadowCommon("io.sentry:sentry:5.7.2") {
+        transitive = false
+    }
 
     implementation "blue.endless:jankson:1.2.1"
     shadowCommon "blue.endless:jankson:1.2.1"
