work dev env and first pass, Still a lot to fix

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx4096M
 org.gradle.daemon=false
 
-minecraft_version=1.20.4
+minecraft_version=1.20.6
 
 platforms=fabric,forge,neoforge
 
@@ -12,12 +12,12 @@ curseforge_version=0.3
 curseforge_id=576589
 artifact_type=release
 
-architectury_version=11.1.17
+architectury_version=12.0.27
 
-fabric_loader_version=0.15.1
-fabric_api_version=0.93.1+1.20.4
+fabric_loader_version=0.15.10
+fabric_api_version=0.97.8+1.20.6
 
 forge_version=49.0.3
-neoforge_version=20.4.232
+neoforge_version=20.6.2-beta
 
 jei_version=17.3.0.49
