--- a/settings.gradle
+++ b/settings.gradle
@@ -7,13 +7,13 @@ pluginManagement {
     }
 }
 
-if (JavaVersion.current().ordinal() + 1 < 17) {
-    throw new IllegalStateException("Please run gradle with Java 17+!")
+if (JavaVersion.current().ordinal() + 1 < 21) {
+    throw new IllegalStateException("Please run gradle with Java 21+!")
 }
 
 include("common")
 include("fabric")
-include("forge")
+//include("forge")
 include("neoforge")
 
 //include("testmod-common")
