--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -116,7 +116,7 @@ unifiedPublishing {
         displayName = "$rootProject.curseforge_version.${ENV.GITHUB_RUN_NUMBER} [Fabric]"
         releaseType = "$rootProject.artifact_type"
         changelog = ""
-        gameVersions = [$rootProject.minecraft_version]
+        gameVersions = ["1.20.6"]
         gameLoaders = ["fabric"]
         mainPublication tasks.remapJar
         relations {
