--- a/testmod-fabric/build.gradle
+++ b/testmod-fabric/build.gradle
@@ -13,7 +13,7 @@ loom {
             vmArg "-Dfabric-api.datagen.output-dir=${file("src/generated/resources")}"
 
             vmArg "-Dpolylib.datagen.output-dir-common=${project(":testmod-common").file("src/generated/resources")}"
-            vmArg "-Dpolylib.datagen.output-dir-forge=${project(":testmod-forge").file("src/generated/resources")}"
+//            vmArg "-Dpolylib.datagen.output-dir-forge=${project(":testmod-forge").file("src/generated/resources")}"
             vmArg "-Dpolylib.datagen.output-dir-fabric=${project(":testmod-fabric").file("src/generated/resources")}"
 
 //            vmArg "-Dfabric-api.datagen.strict-validation=false"
@@ -56,8 +56,8 @@ dependencies {
 //    modLocalRuntime 'RebornCore:RebornCore-1.20:5.8.0'
 //    modLocalRuntime 'TechReborn:TechReborn-1.20:5.8.0'
 
-    modCompileOnly "mezz.jei:jei-${rootProject.minecraft_version}-fabric-api:${rootProject.jei_version}"
-    modRuntimeOnly "mezz.jei:jei-${rootProject.minecraft_version}-fabric:${rootProject.jei_version}"
+//    modCompileOnly "mezz.jei:jei-${rootProject.minecraft_version}-fabric-api:${rootProject.jei_version}"
+//    modRuntimeOnly "mezz.jei:jei-${rootProject.minecraft_version}-fabric:${rootProject.jei_version}"
 }
 
 publishing {
